tests/baselines/reference/expandoFunctionSymbolPropertyJs.errors.txt
/a.js(8,3): error TS7053: Element implicitly has an 'any' type because expression of type 'unique symbol' can't be used to index type '() => void'.
  Property '["./types".symb]' does not exist on type '() => void'.
/a.js(9,3): error TS2741: Property '[symb]' is missing in type '() => void' but required in type 'TestSymb'.


==== /types.ts (0 errors) ====
    export const symb = Symbol();
    
    export interface TestSymb {
      (): void;
      readonly [symb]: boolean;
    }
    
==== /a.js (2 errors) ====
    import { symb } from "./types";
    
    /**
     * @returns {import("./types").TestSymb}
     */
    export function test() {
      function inner() {}
      inner[symb] = true;
      ~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'unique symbol' can't be used to index type '() => void'.
!!! error TS7053:   Property '["./types".symb]' does not exist on type '() => void'.
      return inner;
      ~~~~~~
!!! error TS2741: Property '[symb]' is missing in type '() => void' but required in type 'TestSymb'.
!!! related TS2728 /types.ts:5:12: '[symb]' is declared here.
    }